--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   </head>
   <body>
+    <div id="github">Check out the source code on github!</div>
     <div id="reset" onclick="resetMap()"><i class="fa fa-refresh"></i></div>
     <div id="weather">
       <img id='wicon' src='images/spinner.gif'/>
