--- a/index.html
+++ b/index.html
@@ -182,14 +182,19 @@ Of course, I would say this, because I live near Disneyland, and they are always
             </ul>
             <div class="tab-content">
               <div class="tab-pane" id="gender_tab">
+<div class="flag" id="flagpie"><img src="images/chicago-flag.png" /></div>
                 <div id="gender" style="display: inline"></div>
                 <div id="gender-selected" class="inline selection_graph"></div>
               </div>
               <div class="tab-pane" id="subscriber_status_tab">
+<div class="flag" id="flagpie"><img src="images/chicago-flag.png" /></div>
+
                 <div id="type" style="display: inline"></div>
                 <div id="type-selected" class="inline selection_graph"></div>
               </div>
               <div class="tab-pane" id="age_tab">
+<div class="flag" id="flagpie"><img src="images/chicago-flag.png" /></div>
+
                 <div id="age" style="display: inline"></div> 
                 <div id="age-selected" class="inline selection_graph"></div>
               </div>
@@ -219,6 +224,7 @@ Of course, I would say this, because I live near Disneyland, and they are always
                 <div id="chartDayOfWeek" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Number of Bikes out by Day of the Week</h3>
+                <div class="flag" id="flagday"><img src="images/chicago-flag.png" /></div>
                   </p>
                 </div>
                  &nbsp;
@@ -229,6 +235,7 @@ Of course, I would say this, because I live near Disneyland, and they are always
                 <div id="chartHourOfDay" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Number of Bikes out by Hour of the Day</h3>
+<div class="flag" id="flaghour"><img src="images/chicago-flag.png" /></div>
                   </p>
                 </div> 
                  &nbsp;
@@ -239,6 +246,7 @@ Of course, I would say this, because I live near Disneyland, and they are always
                 <div id="chartDistancesOverall" class="bryan">
                  <p class="chartLabel">  
                     <h3>Distribution of Distances Biked</h3>
+    <div class="flag" id="flagdist"><img src="images/chicago-flag.png" /></div>
                   </p>
                 </div>
                  &nbsp;
@@ -249,6 +257,7 @@ Of course, I would say this, because I live near Disneyland, and they are always
                 <div id="chartTimesOverall" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Distribution of Times Travelled</h3>
+                <div class="flag" id="flagdist"><img src="images/chicago-flag.png" /></div>
                   </p>
                 </div>
                 <div id="chartTimesOverall-selected" class="inline selection_graph">
@@ -282,6 +291,8 @@ Of course, I would say this, because I live near Disneyland, and they are always
                 </div>
               </div>
               <div class="tab-pane" id="day_of_year">
+                <div class="flag" id="flagyear"><img src="images/chicago-flag.png" /></div>
+
                 <div id="bikes-per-year" class="inline"></div>
                 <div id="bikes-per-year-selected" class="inline selection_graph"></div>
               </div>     
@@ -518,6 +529,8 @@ Of course, I would say this, because I live near Disneyland, and they are always
           <h3>python and mysql for data processing</h3>
           <h3>cherrypy for serving live data queries</h3>
           <h3>Adobe Illustrator and Inkscape for design</h3>
+          <br />
+          <h3>Check out the src code on <a href="https://github.com/trustdarkness/divvy-data">Github!</a></h3>
         </div>
       </div>
     </div>
