--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
        heightStyle: "content", collapsible: true, active: false
     });
   });
+  $(function() {
+    $( "#doc-button" ).accordion({
+       heightStyle: "content", collapsible: true, active: false
+    });
+  });
+
 
   $(function() {
     $('#flow-control').buttonset();
