forgot to add update for uic station analysis

--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@
           - Built test sqllite db for divvy data
           <h3>Week 2</h3>
           - SVG overview graphs in sidebar 
+		  <h3>Week 4</h3>
+          - Analysis of 6 stations closest to UIC 
           <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
           <h3>Week 1</h3>
           - Made vector mockups of application interface and icons <br />
